sort.basic.comb.AlgCombSort.scala.error
Compilation error:
AlgCombSort:11: error: reassignment to val
          i= i +1
           ^