sort.basic.comb.AlgCombSort.scala.code
def combSort() {
  var gap=getValueCount()
  var len=getValueCount()
  while(gap>1){
    gap = (gap.toDouble / 1.3).toInt
    for(i<-1 to len){
      while(i+gap<len){
        if(isSmaller(i+gap,i)){
          swap(i,i+gap)
          i= i +1
        }
      }
      
    }
  }
}